# todo

./: .gitignore  Cargo.toml  build.rs  readme.md
src/: lib.rs  main.rs  note.rs
src/command/: app.rs  cmd_list.rs  cmd_new.rs  cmd_random.rs  cmd_remove.rs  cmd_where.rs  command.rs  index.rs  mod.rs  query.rs
src/config/: config.rs  hook.rs  mod.rs
