[package]
name = "todo"
version = "0.4.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.2"
glob = "0.3.0"
serde = "1.0.126"
serde_derive = "1.0.126"
toml = "0.5.8"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
